--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "msw": "^0.36.3",
     "prettier": "^2.5.1",
     "babel-jest": "^27.5.1",
-    "turbo": "*"
+    "turbo": "^1.8.3"
   },
   "turbo": {
     "pipeline": {
